<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_dark_onErrorContainer"
    android:padding="20dp"
    tools:context=".ui.CreateAccountFragment">

    <ImageView
        android:id="@+id/appIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription=""
        android:src="@drawable/tappze" />

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appIcon"
        android:layout_centerHorizontal="true"
        android:text="@string/it_s_not_just_a_tap_it_s_a_way_of_thinking"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createAccountBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descriptionText"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_edge_btn"
        android:elevation="4dp"
        android:text="@string/create_account"
        android:textColor="@color/md_theme_dark_onErrorContainer" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createAccountBtn"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/existingMemberText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/existing_member"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/signInText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_marginStart="4dp"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/text1"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Going Forward, I agree to the Privacy Policy &amp; Terms of Service"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_marginStart="40dp"
        />
</RelativeLayout>



