<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".com.example.tappze.ui.settings.SettingsFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/ll1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/ll1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appIcon">

            <ImageView
                android:id="@+id/appIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription=""
                android:src="@drawable/tappze"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/tv_subscription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/subscriptions"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_purchase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/purchase_items"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/change_password"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_Contact_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/contact_us"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_sign_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/sign_out"
                android:textColor="@color/md_theme_light_error"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>


    </ScrollView>

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/text_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="Profile"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:checkedButton="@+id/btn_profile_off"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_profile_off"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:paddingHorizontal="24dp"
                android:paddingVertical="8dp"
                android:text="Profile Off"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:cornerRadius="4dp"
                app:strokeColor="@android:color/black"
                app:strokeWidth="1dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_profile_on"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:paddingHorizontal="24dp"
                android:paddingVertical="8dp"
                android:text="Profile On"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:cornerRadius="4dp"
                app:strokeColor="@android:color/black"
                app:strokeWidth="1dp" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>