<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:scrollbars="none"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="@android:color/white"
        tools:context=".com.example.tappze.ui.password_reset.ChangePasswordBottomSheet">

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/bottomSheetHeading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginStart="25dp"
                android:layout_weight="1"
                android:text="@string/reset_password"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/closeBottomSheet"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/ic_dropdown" />

        </LinearLayout>

        <ImageView
            android:id="@+id/socialLinkImgBottomSheet"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:elevation="50dp"
            android:scaleType="centerCrop"
            android:src="@drawable/tappze"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll1" />


        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/socialLinkImgBottomSheet">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/linkLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:padding="15dp"
                android:hint="@string/email"
                app:boxStrokeColor="@color/md_theme_dark_onSecondary"
                app:hintTextColor="@color/md_theme_dark_onSecondary"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <include
            android:id="@+id/createAccountBtn"
            layout="@layout/loading_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/custom_button"
            android:elevation="30dp"
            android:text="@string/send"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll2" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>